Add picture to webapp

--- a/mobileMeds/res/values/strings.xml
+++ b/mobileMeds/res/values/strings.xml
@@ -6,4 +6,5 @@
     <color name="PaleYellow">#fde5a7</color>
     <color name="Black">#000000</color>
     <color name="White">#FFFFFF</color>
+    <string name="photo">Photo</string>
 </resources>
